--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "オンライン戦略シミュレーション",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:espower-babel/guess --recursive test",
+    "lint": "gulp lint"
   },
   "author": "dera-",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "babel-core": "^5.8.22",
     "babel-eslint": "^4.1.0",
     "babel-loader": "^5.3.2",
+    "espower-babel": "^3.3.0",
     "espower-loader": "^1.0.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
